<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:id="@+id/activity_contacto">

    <TextView
        android:id="@+id/tvContactoTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contacto_titulo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textAlignment="center"/>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvContactoTitulo"
        app:hintTextAppearance="@style/FloatingLabel">

        <android.support.design.widget.TextInputEditText
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:id="@+id/inCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contacto_correo"
            android:theme="@style/EditText"
            />


    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilAsunto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilCorreo"
        app:hintTextAppearance="@style/FloatingLabel">>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/inAsunto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contacto_asunto"
            android:theme="@style/EditText"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilAsunto"
        app:hintTextAppearance="@style/FloatingLabel">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/inMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditText"
            android:hint="@string/contacto_mensaje"
            />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnEnviarCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contacto_boton_enviar"
        android:layout_below="@+id/tilMensaje"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp" />


</RelativeLayout>